--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/onXmaps/jirafy-changelog.git"
+    "url": "git+https://github.com/coalescent-labs/jirafy-changelog.git"
   },
   "keywords": [
     "jira",
@@ -24,12 +24,12 @@
     "merged",
     "pull request"
   ],
-  "author": "onXmaps",
+  "author": "coalescent-labs",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/onXmaps/jirafy-changelog/issues"
+    "url": "https://github.com/coalescent-labs/jirafy-changelog/issues"
   },
-  "homepage": "https://github.com/onXmaps/jirafy-changelog#readme",
+  "homepage": "https://github.com/coalescent-labs/jirafy-changelog#readme",
   "dependencies": {
     "@actions/core": "^1.10.1",
     "@actions/exec": "^1.1.1",
